Grayscale/keil/.vscode/uv4.log
*** Using Compiler 'V6.22', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'MSPM03507'
Before Build - User command #1: cmd.exe /C "c:\Users\silly\Desktop\diansai\code\Grayscale\keil\../Start/tools/keil/syscfg.bat 'c:\Users\silly\Desktop\diansai\code\Grayscale\keil\' ncontroller.syscfg"
Using Sysconfig Tool from "D:\TI\sysconfig_1.19.0\sysconfig_cli.bat"
"Update the file located at <sdk path>/tools/keil/syscfg.bat to use a different version"
Running script...
Validating...
info: /ti/project_config/ProjectConfig deviceSpin: Note: User must select a device after migration. 
info: SPI_OLED(/ti/driverlib/SPI): Peripheral does not retain register contents in STOP or STANDBY modes. User should take care to save and restore register configuration in application. See Retention Configuration section for more details.
info: TIMER_0(/ti/driverlib/TIMER): Peripheral does not retain register contents in STOP or STANDBY modes. User should take care to save and restore register configuration in application. See Retention Configuration section for more details.
Generating Code (ncontroller.syscfg)...
Unchanged c:\Users\silly\Desktop\diansai\code\Grayscale\ti_msp_dl_config.c...
Unchanged c:\Users\silly\Desktop\diansai\code\Grayscale\ti_msp_dl_config.h...
Unchanged c:\Users\silly\Desktop\diansai\code\Grayscale\Event.dot...
../hardware/grayscale/grayscale.c(10): error: use of undeclared identifier 'I2C_1_INST'
   10 |     DL_I2C_fillControllerTXFIFO(I2C_1_INST, temp, 2);
      |                                 ^
../hardware/grayscale/grayscale.c(11): error: use of undeclared identifier 'I2C_1_INST'
   11 |     while (!(DL_I2C_getControllerStatus(I2C_1_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(13): error: use of undeclared identifier 'I2C_1_INST'
   13 |     DL_I2C_startControllerTransfer(I2C_1_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_TX, 2);
      |                                    ^
../hardware/grayscale/grayscale.c(14): error: use of undeclared identifier 'I2C_1_INST'
   14 |     while (DL_I2C_getControllerStatus(I2C_1_INST) & DL_I2C_CONTROLLER_STATUS_BUSY_BUS);
      |                                       ^
../hardware/grayscale/grayscale.c(15): error: use of undeclared identifier 'I2C_1_INST'
   15 |     while (!(DL_I2C_getControllerStatus(I2C_1_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(16): error: use of undeclared identifier 'I2C_1_INST'
   16 |     DL_I2C_flushControllerTXFIFO(I2C_1_INST);
      |                                  ^
../hardware/grayscale/grayscale.c(22): error: use of undeclared identifier 'I2C_1_INST'
   22 |     DL_I2C_fillControllerTXFIFO(I2C_1_INST, &addr, 1);
      |                                 ^
../hardware/grayscale/grayscale.c(24): error: use of undeclared identifier 'I2C_1_INST'
   24 |                 DL_I2C_disableInterrupt(I2C_1_INST, DL_I2C_INTERRUPT_CONTROLLER_TXFIFO_TRIGGER);
      |                                         ^
../hardware/grayscale/grayscale.c(26): error: use of undeclared identifier 'I2C_1_INST'
   26 |     while (!(DL_I2C_getControllerStatus(I2C_1_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(27): error: use of undeclared identifier 'I2C_1_INST'
   27 |     DL_I2C_startControllerTransfer(I2C_1_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_TX, 1);
      |                                    ^
../hardware/grayscale/grayscale.c(28): error: use of undeclared identifier 'I2C_1_INST'
   28 |     while (DL_I2C_getControllerStatus(I2C_1_INST) & DL_I2C_CONTROLLER_STATUS_BUSY_BUS);
      |                                       ^
../hardware/grayscale/grayscale.c(29): error: use of undeclared identifier 'I2C_1_INST'
   29 |     while (!(DL_I2C_getControllerStatus(I2C_1_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(32): error: use of undeclared identifier 'I2C_1_INST'
   32 |     DL_I2C_startControllerTransfer(I2C_1_INST, IR_I2C_ADDR, DL_I2C_CONTROLLER_DIRECTION_RX, 1);
      |                                    ^
../hardware/grayscale/grayscale.c(33): error: use of undeclared identifier 'I2C_1_INST'
   33 |     while (DL_I2C_getControllerStatus(I2C_1_INST) & DL_I2C_CONTROLLER_STATUS_BUSY_BUS);
      |                                       ^
../hardware/grayscale/grayscale.c(34): error: use of undeclared identifier 'I2C_1_INST'
   34 |     while (!(DL_I2C_getControllerStatus(I2C_1_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
      |                                         ^
../hardware/grayscale/grayscale.c(35): error: use of undeclared identifier 'I2C_1_INST'
   35 |     data = DL_I2C_receiveControllerData(I2C_1_INST);
      |                                         ^
16 errors generated.
compiling grayscale.c...
".\Objects\ncontroller.axf" - 16 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:02
